Relocated images to img folder.
Removed unused CDN calls

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png" />
     <title>Tag Along</title>
 
     <!-- Font-Awesome for Awesome Icons.-->
@@ -19,15 +19,15 @@
   <body class='home'>
     <div id='login-page'></div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/js/foundation.min.js"></script>
-    <!--Auth0-->
+
+    <!-- React -->
     <script src="//fb.me/react-0.13.3.js"></script>
+    
+    <!--Auth0-->
     <script src="//cdn.auth0.com/w2/auth0-6.js"></script>
     <script src="//cdn.auth0.com/js/lock-7.js"></script>
-
-    <!--script type="text/jsx" src="/js/auth.js"></script-->
 
     <script type='text/jsx'>
       $(document).foundation();
